syntax = "proto3";

option java_package = "io.tryrook.rook_sdk.proto";
option java_outer_classname = "ProtobufModels";
option java_multiple_files = true;

enum HealthPermissionProto {
  SLEEP = 0;
  PHYSICAL = 1;
  BODY = 2;
  ALL = 3;
}

enum AvailabilityStatusProto {
  INSTALLED = 0;
  NOT_INSTALLED = 1;
  NOT_SUPPORTED = 2;
}

message DeviceNotSupportedExceptionProto {
  string message = 1;
}

message HealthConnectNotInstalledExceptionProto {
  string message = 1;
}

message HttpRequestExceptionProto {
  string message = 1;
  uint32 code = 2;
}

message MissingConfigurationExceptionProto {
  string message = 1;
}

message MissingPermissionsExceptionProto {
  string message = 1;
}

message RequestQuotaExceededExceptionProto {
  string message = 1;
}

message SDKNotInitializedExceptionProto {
  string message = 1;
}

message TimeoutExceptionProto {
  string message = 1;
}

message UserNotInitializedExceptionProto {
  string message = 1;
}

message GenericExceptionProto {
  string message = 1;
}

message MissingAndroidPermissionsExceptionProto {
  string message = 1;
}

message ResultBooleanProto {

  oneof result {
    bool success = 1;
    DeviceNotSupportedExceptionProto deviceNotSupportedExceptionProto = 2;
    HealthConnectNotInstalledExceptionProto healthConnectNotInstalledExceptionProto = 3;
    HttpRequestExceptionProto httpRequestExceptionProto = 4;
    MissingConfigurationExceptionProto missingConfigurationExceptionProto = 5;
    MissingPermissionsExceptionProto missingPermissionsExceptionProto = 6;
    RequestQuotaExceededExceptionProto requestQuotaExceededExceptionProto = 7;
    SDKNotInitializedExceptionProto sdkNotInitializedExceptionProto = 8;
    TimeoutExceptionProto timeoutExceptionProto = 9;
    UserNotInitializedExceptionProto userNotInitializedExceptionProto = 10;
    GenericExceptionProto genericExceptionProto = 11;
    MissingAndroidPermissionsExceptionProto missingAndroidPermissionsExceptionProto = 12;
  }
}
